--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,114 +1,126 @@
-.site-footer
-{
-  background-color:#26272b;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
+body{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  min-height: 100vh;
+  background: #333;
 }
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
+footer{
+  position: relative;
+  width: 100%;
+  background: #3586ff;
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.site-footer hr.small
+
+footer .social-icons,
+footer .footer-links
 {
-  margin:20px 0
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
 }
-.site-footer h6
+
+ footer .social-icons li,
+ footer .footer-links li
+ {
+  list-style: none;
+ }
+
+footer .social-icons li a
+/* footer .footer-links li a */
+ {
+  font-size: 2em;
+  color: #050202;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+ }
+
+ footer .social-icons li a:hover
+ {
+   transform: translateY(-10px);
+ }
+
+
+ footer .footer-links li a
+ {
+  font-size: 1.2em;
+  color: #050202;
+  margin: 0 10px;
+  display: inline-block;
+  text-decoration: none;
+ }
+
+footer .footer-links li a:hover
 {
-  color:#fff;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
+  opacity: 1;
 }
-.site-footer a
+
+footer p
 {
-  color:#737373;
+  color: #050202;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: 1.1em;
 }
-.site-footer a:hover
+
+footer .wave
 {
-  color:#3366cc;
-  text-decoration:none;
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: #f00;
+  background-size: 1000px 100px;
 }
-.footer-links
+
+
+footer .wave#wave1
 {
-  padding-left:0;
-  list-style:none
+   z-index: 1000;
+   opacity: 1;
+   bottom: 0;
+   animation: animateWave 4s linear infinite;
 }
-.footer-links li
+
+footer .wave#wave2
 {
-  display:block
+   z-index: 999;
+   opacity: 0.5;
+   bottom: 10px;
+   animation: animateWave_02 4s linear infinite;
 }
-.footer-links a
+
+footer .wave#wave1
 {
-  color:#737373
+   z-index: 1000;
+   opacity: 1;
+   bottom: 1;
+   animation: animateWave 4s linear infinite;
 }
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+@keyframes animateWave
 {
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links.inline li
-{
-  display:inline-block
-}
-.site-footer .social-icons
-{
-  text-align:right
-}
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
-}
-.copyright-text
-{
-  margin:0
-}
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
+  0%
   {
-    margin-bottom:30px
+      background-position-x: 1000px;
+  }
+  100%
+  {
+      background-position-x: 1000px;
   }
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
-}
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
-}
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
-}
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
-}
+
+
 .social-icons a{
   background-color:#eceeef;
   color:#818a91;
@@ -124,18 +136,10 @@
   -o-transition:all .2s linear;
   transition:all .2s linear
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
-}
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
-}
+
+
+
+
 .social-icons a.facebook:hover
 {
   background-color:#3b5998
