--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,29 +1,11 @@
-<!-- Site footer -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-2"style="text-align: left;" style="margin-right: 100px;">
-
-        <h6>RESMAN</h6>
-        <a id="logo" href="Home" class="logo"><img src="./assets/images/logo.jpg" alt=""[style.width]="'60px'" [style.height]="'70px'" style="margin-left: 5px;"></a>
-      </div>
-      <div class="col-md-2">
-        <ul class="footer-links">
-          <li><a href="About">Về chúng tôi</a></li>
-          <li><a href="Contact">Liên hệ</a></li>
-          <li><a href="Menu">Thực đơn</a></li>
-          <li><a href="Signin">Đăng nhập</a></li>
-        </ul>
-      </div>
+<body>
+  <footer>
+    <div class = "waves">
+      <div class =" wave" id="wave1"></div>
+      <div class =" wave" id="wave2"></div>
+      <div class =" wave" id="wave3"></div>
+      <div class =" wave" id="wave4"></div>
     </div>
-    <hr>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-sm-6 col-xs-12">
-        <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by
-     <a href="Home">Resman</a>.
-        </p>
-      </div>
 
       <div class="col-md-4 col-sm-6 col-xs-12">
         <ul class="social-icons">
@@ -32,6 +14,15 @@
           <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
           <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
         </ul>
+        <ul class="footer-links">
+          <li><a href="About">Về chúng tôi</a></li>
+          <li><a href="Contact">Liên hệ</a></li>
+          <li><a href="Menu">Thực đơn</a></li>
+          <li><a href="Signin">Đăng nhập</a></li>
+        </ul>
+        <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by
+          <a href="Home">Resman</a>.
+             </p>
       </div>
-    </div>
-  </div>
+  </footer>
+</body>
