--- a/src/app/components/addmon/addmon.component.html
+++ b/src/app/components/addmon/addmon.component.html
@@ -1,8 +1,6 @@
-<form action="/wpcf7-f197-p4-o2" method="post" class="wpcf7-form invalid"novalidate="novalidate">
-
-
+<form  (ngSubmit)="getUserFormData(reservation)" #myForm="ngForm">
           <span class="wpcf7-form-control-wrap text-800">
-            <input type="text" name="text-800" value size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Tên món ăn">
+            <input type="text" id="tenmon" name="tenmon" [(ngModel)]="reservation.tenmon" placeholder="Tên món ăn" required>
             <span role="alert" class="wpcf7-not-valid-tip">
 
             </span>
@@ -10,7 +8,7 @@
           <br>
 
           <span class="wpcf7-form-control-wrap tel-364">
-            <input type="tel" name="tel-364" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Gía tiền">
+            <input type="text" id="gia" name="gia" [(ngModel)]="reservation.gia" placeholder="Gía tiền" required>
             <span role="alert" class="wpcf7-not-valid-tip">
 
             </span>
@@ -18,7 +16,7 @@
           <br>
 
           <span class="wpcf7-form-control-wrap number-992">
-            <input type="number" name="number-992" value="" class="wpcf7-form-control wpcf7-number wpcf7-validates-as-required wpcf7-validates-as-number wpcf7-not-valid" min="1" max="30" aria-required="true" aria-invalid="true" placeholder="Loại món ăn ">
+            <input type="text" id="loai" name="loai" [(ngModel)]="reservation.loai" placeholder="Loại món ăn " required>
             <span role="alert" class="wpcf7-not-valid-tip">
 
             </span>
@@ -26,7 +24,7 @@
           <br>
 
           <span class="wpcf7-form-control-wrap text-800">
-            <input type="text" name="text-800" value size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Mô tả món ăn">
+            <input type="text" id="desc" name="desc" [(ngModel)]="reservation.desc" placeholder="Mô tả món ăn" required>
             <span role="alert" class="wpcf7-not-valid-tip">
             </span>
           </span>
@@ -36,3 +34,4 @@
           <span class="ajax-loader"></span>
 
         </form>
+
