--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -168,3 +168,27 @@ button span:after {
   background-color: #fff;
 }
 
+.cart-icon{
+  background-color:#eceeef;
+  color:#000000;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s
+
+}
+
+.cart-icon{
+  background-color: #e3eeff;
+}
+
+shopee-svg-icon{
+  color:#616161;
+}
